Página de compra y resumen de entradas actualizadas

--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -15,14 +15,8 @@
                 <h1 class="mt-5">El buen patrón - Sesión de las 21:00</h1>
                 <div class="d-flex align-items-center mt-5">
                     <div class="d-flex flex-column ">
-                        <select class="form-select mb-4" aria-label="Seleccion de Cine">
-                            <option selected>Seleccione un cine</option>
-                            <option value="1">Madrid - La Gavia</option>
-                            <option value="2">Madrid - Plaza Rio 2</option>
-                            <option value="3">Barcelona - Barnasud</option>
-                            <option value="4">Barcelona - Diagonal</option>
-                            <option value="5">Valencia - Bonaire</option>
-                        </select>
+                        <h5 class="">Cine: La Gavia</h6>
+                        <h5 class="">Sala 2</h6>
                         <h6 class="mb-3">Precio entrada: <span id="precioentrada">11.50</span>€</h6>
                         <div class="d-flex mb-4">
                             <button type="button" class="btn btn-dark botoncantidad me-2" id="botonmas" onclick="botonmass()">+</button>
