--- a/src/main/resources/templates/resumenEntrada.html
+++ b/src/main/resources/templates/resumenEntrada.html
@@ -14,8 +14,10 @@
             <h1 class="mt-5">Gracias por su compra</h1>
             <div class="d-flex mt-5">
                 <div class="d-flex flex-column">
-                    <h5><span class="bold">Cine:</span> La Gavia</h5>
                     <h5><span class="bold">Película:</span> El Gran Patrón</h5>
+                    <h5><span class="bold">Cine:</span> La Gavia</h5>
+                    <h5><span class="bold">Sala:</span> 2</h5>
+                    <h5><span class="bold">Día:</span> 01/03/22</h5>
                     <h5><span class="bold">Sesión:</span> 21:00</h5>
                     <h5><span class="bold">Número de entradas:</span> 10</h5>
                     <h5><span class="bold">Precio final:</span> 115,00€</h5>
@@ -23,7 +25,7 @@
                     <button type="button" class="btn btn-dark mt-2">Descargar en PDF</button>
                 </div>
                 <div class="d-flex flex-column align-items-center ms-5">
-                    <img th:src="@{/img/qrtest.png}" src="/img/qrtest.png" alt="imagen cine" height="268px" width="268px" class="d-inline-block">
+                    <img th:src="@{/img/qrtest.png}" src="/img/qrtest.png" alt="imagen cine" height="368px" width="368px" class="d-inline-block">
                     <h6 class="bold">67G5HJ4F</h6>
                 </div>
             </div>
