--- a/src/main/resources/templates/compraEntradas.html
+++ b/src/main/resources/templates/compraEntradas.html
@@ -15,6 +15,7 @@
                 <h1 class="mt-5">El buen patrón - Sesión de las 21:00</h1>
                 <div class="d-flex align-items-center mt-5">
                     <div class="d-flex flex-column ">
+                        <h5 class="">Día: 01/03/22</h6>
                         <h5 class="">Cine: La Gavia</h6>
                         <h5 class="">Sala 2</h6>
                         <h6 class="mb-3">Precio entrada: <span id="precioentrada">11.50</span>€</h6>
