--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -228,8 +228,8 @@
                                                         th:src="@{/img/lagavia.jpg}" src="/img/lagavia.jpg"
                                                         alt="imagen cine" height="120px" width="84px"
                                                         class="d-inline-block"></a></td>
-                                            <td><a th:href="@{/cines/la-gavia}" class="text-dark bold">La Gavia</a></td>
                                             <td class="text-dark bold">Sala 2</td>
+                                            <td><a th:href="@{/cines/la-gavia}" class="text-dark bold">La Gavia</a></td>
                                             <td>4 filas</td>
                                             <td>12 columnas</td>
                                             <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
@@ -241,8 +241,8 @@
                                                     th:href="@{/cines/plaza-rio-2}"><img th:src="@{/img/plazario2.jpg}"
                                                         src="/img/plazario2.jpg" alt="imagen cine" height="120px"
                                                         width="84px" class="d-inline-block"></a></td>
-                                            <td><a th:href="@{/cines/plaza-rio-2}" class="text-dark bold">Plaza Rio 2</a></td>
                                             <td class="text-dark bold">Sala 1</td>
+                                            <td><a th:href="@{/cines/plaza-rio-2}" class="text-dark bold">Plaza Rio 2</a></td>
                                             <td>5 filas</td>
                                             <td>10 columnas</td>
                                             <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
@@ -253,9 +253,10 @@
                                             <td class="d-flex align-items-center"><a th:href="@{/cines/barnasud}"><img
                                                         th:src="@{/img/barnasud.jpg}" src="/img/barnasud.jpg"
                                                         alt="imagen cine" height="120px" width="84px"
-                                                        class="d-inline-block"></a></td>
-                                            <td><a th:href="@{/cines/barnasud}" class="text-dark bold">Barnasud</a></td>
+                                                        class="d-inline-block"></a>
+                                             </td>
                                             <td class="text-dark bold">Sala 3</td>
+                                            <td><a th:href="@{/cines/barnasud}" class="text-dark bold">Barnasud</a></td>
                                             <td>3 filas</td>
                                             <td>15 columnas</td>
                                             <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
@@ -267,8 +268,8 @@
                                                         th:src="@{/img/diagonal.png}" src="/img/diagonal.png"
                                                         alt="imagen cine" height="120px" width="84px"
                                                         class="d-inline-block"></a></td>
-                                            <td><a th:href="@{/cines/diagonal}" class="text-dark bold">Diagonal</a></td>
                                             <td class="text-dark bold">Sala 5</td>
+                                            <td><a th:href="@{/cines/diagonal}" class="text-dark bold">Diagonal</a></td>
                                             <td>4 filas</td>
                                             <td>10 columnas</td>
                                             <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
@@ -280,8 +281,8 @@
                                                         th:src="@{/img/bonaire.jpg}" src="/img/bonaire.jpg"
                                                         alt="imagen cine" height="120px" width="84px"
                                                         class="d-inline-block"></a></td>
-                                            <td><a th:href="@{/cines/bonaire}" class="text-dark bold">Bonaire</a></td>
                                             <td class="text-dark bold">Sala 7</td>
+                                            <td><a th:href="@{/cines/bonaire}" class="text-dark bold">Bonaire</a></td>
                                             <td>3 filas</td>
                                             <td>12 columnas</td>
                                             <td><button type="button" class="btn btn-dark btn-sm">Editar</button></td>
