--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -17,6 +17,24 @@
                     <div class="mad d-flex flex-column mt-5 me-5">
                         <h2>Madrid</h2>
                         <div class="cine d-flex align-items-center mt-3">
+                            <!--
+                                <div th:each="lista : ${miLista}"  class="col">
+                                            <div class="card h-100">
+                                            <img th:src="${lista.foto}" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                                <h5 th:text="${lista.nombre}" class="card-title"></h5>
+                                                <p th:text="${lista.descripcion}" class="card-text"></p>
+                                                <p th:text="${lista.emailUser}" class="card-text"></p>
+                                            </div>
+                                            </div>
+                                        </div>
+
+                                
+                             -->
+
+
+
+
                             <img th:src="@{/img/lagavia.jpg}" src="/img/lagavia.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/la-gavia}" class="ms-2 bold text-dark">La Gavia</a>
