--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -10,7 +10,7 @@
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
-        <div class="container d-flex">
+       <!-- <div class="container d-flex">
             <div class="cines">
                 <h1 class="mt-5">Listado de Cines</h1>
                 <div class="d-flex">
@@ -96,7 +96,7 @@
                 </div>
                 
             </div>
-        </div>
+        </div>  -->
     </main>
 
     <th:block th:replace="fragments/footer.html :: footer" />
