--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -10,11 +10,11 @@
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
-       <!-- <div class="container d-flex">
+        <div class="container d-flex">
             <div class="cines">
                 <h1 class="mt-5">Listado de Cines</h1>
                 <div class="d-flex">
-                    <div th:each="cine : ${listaCines}"  class="col">
+                    <!--<div th:each="cine : ${listaCines}"  class="col">
                         <div class="card h-100">
                         <div class="card-body">
                             <h5 th:text="${cine.id}" class="card-title"></h5>
@@ -22,81 +22,76 @@
                             <p th:text="${cine.direccion}" class="card-text"></p>
                         </div>
                         </div>
-                 </div>
+                    </div>-->
                     <div class="mad d-flex flex-column mt-5 me-5">
-                        <div class="cine d-flex align-items-center mt-3">
-                               
-                            <img th:src="@{/img/lagavia.jpg}" src="/img/lagavia.jpg" alt="imagen cine" height="120px"
+                        <h2>Madrid</h2>
+                        <div th:each="cine : ${listaCines}" th:if="${cine.ciudad=='Madrid'}" class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/{id}(id=${cine.imagen})}" src="/img/lagavia.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
-                            <a th:href="@{/cines/la-gavia}" class="ms-2 bold text-dark">La Gavia</a>
-                        </div>
-                        <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/plazario2.jpg}" src="/img/plazario2.jpg" alt="imagen cine" height="120px"
-                                width="84px" class="d-inline-block">
-                            <a th:href="@{/cines/plaza-rio-2}" class="ms-2 bold text-dark">Plaza Río 2</a>
+                            <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">La Gavia</a>
                         </div>
                     </div>
                     <div class="bcn d-flex flex-column mt-5 me-5">
                         <h2>Barcelona</h2>
-                        <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/barnasud.jpg}" src="/img/barnasud.jpg" alt="imagen cine" height="120px"
+                        <div th:each="cine : ${listaCines}" th:if="${cine.ciudad=='Barcelona'}" class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/{id}(id=${cine.imagen})}" src="/img/barnasud.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
-                            <a th:href="@{/cines/barnasud}" class="ms-2 bold text-dark">Barnasud</a>
-                        </div>
-                        <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/diagonal.png}" src="/img/diagonal.png" alt="imagen cine" height="120px"
-                                width="84px" class="d-inline-block">
-                            <a th:href="@{/cines/diagonal}" class="ms-2 bold text-dark">Diagonal</a>
+                            <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">Barnasud</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex">
                     <div class="vlc d-flex flex-column mt-5 me-5">
                         <h2>Valencia</h2>
-                        <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/bonaire.jpg}" src="/img/bonaire.jpg" alt="imagen cine" height="120px"
+                        <div th:each="cine : ${listaCines}" th:if="${cine.ciudad=='Valencia'}" class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/{id}(id=${cine.imagen})}" src="/img/bonaire.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
-                            <a th:href="@{/cines/bonaire}" class="ms-2 bold text-dark">Bonaire</a>
+                            <a th:text="${cine.nombre}" th:href="@{/cines/{id}(id=${cine.id})}" class="ms-2 bold text-dark">Bonaire</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="mapa-info ms-5">
-                <div class="d-flex justify-content-center mt-5"><h2 class="mt-5">La Gavia</h2></div>
+            <div th:if="${cineInfo!=null}" class="mapa-info ms-5">
+                <div class="d-flex justify-content-center mt-5"><h2 th:text="${cineInfo.nombre}" class="mt-5 titul">La Gavia</h2></div>
                 <div class="d-flex justify-content-center">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.7973319854436!2d-3.601224384308786!3d40.369017966463225!2m3!1f0!2f0!3f0!3m2!1i1024!
-                    2i768!4f13.1!3m3!1m2!1s0xd4224dc15dad579%3A0xcbf9370ac84ce0db!2sCC%20La%20Gavia!5e0!3m2!1ses!2ses!4v1645031698047!5m2!1ses!2ses" 
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mt-5"></iframe>
+                    
+                    <div id="map" class="mt-5"></div>
+                    <script th:inline="javascript">
+                        function initMap() {
+                                let pos = /*[[${cineInfo.urlmap}]]*/ "0,0";
+                                let latlng = pos.split(",");
+                                // The location of the map
+                                var c = { lat: +latlng[0], lng: +latlng[1] };
+                                console.log(c.lat);
+                                console.log(c.lng);
+                                var map = new google.maps.Map(document.getElementById('map'), { zoom: 10, center: c });
+                                var marker = new google.maps.Marker({ position: c, map: map });
+                            
+                        }
+                    </script>
+                    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBncVh-3ckA9tPjbWstXnSGDRI8ySEnQ08&callback=initMap"></script>
                     <div class="info mt-5 ms-5">
-                        <p><span class="bold">Dirección:</span> C/Adolfo Bioy Casares, 2, 28051 Madrid</p>
-                        <p><span class="bold">Horario:</span> 10:00 - 22:00</p>
-                        <p><span class="bold">Teléfono:</span> 914255401</p>
-                        <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
+                        <p><span class="bold">Dirección: </span> <span th:text="${cineInfo.direccion}">C/Adolfo Bioy Casares, 2, 28051</span>&nbsp;<span th:text="${cineInfo.ciudad}">Madrid</span></p>
+                        <p><span class="bold">Horario: </span><span th:text="${cineInfo.hora_apertura}">10:00</span> - <span th:text="${cineInfo.hora_cierre}">22:00</span></p>
+                        <p><span class="bold">Teléfono: </span><span th:text="${cineInfo.telefono}">914255401</span></p>
+                        <div id="carouselExampleSlidesOnly" class="carousel slide mt-5" data-bs-ride="carousel">
                             <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img th:src="@{/img/imagencine.jpg}" src="/img/imagencine.jpg" class="d-block imgcarousel" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img th:src="@{/img/imagencine2.jpg}" src="/img/imagencine2.jpg" class="d-block imgcarousel" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img th:src="@{/img/imagencine3.jpg}" src="/img/imagencine3.jpg" class="d-block imgcarousel" alt="...">
-                              </div>
+                                <div class="carousel-item active">
+                                    <img th:src="@{/img/imagencine.jpg}" src="/img/imagencine.jpg" class="d-block imgcarousel" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img th:src="@{/img/imagencine2.jpg}" src="/img/imagencine2.jpg" class="d-block imgcarousel" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img th:src="@{/img/imagencine3.jpg}" src="/img/imagencine3.jpg" class="d-block imgcarousel" alt="...">
+                                </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                          </div>
+                        </div>
                     </div>
                 </div>
                 
             </div>
-        </div>  -->
+        </div>  
     </main>
 
     <th:block th:replace="fragments/footer.html :: footer" />
