--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -91,6 +91,9 @@
                 </div>
                 
             </div>
+            <div th:unless="${cineInfo!=null}" class="mapa-info ms-5 d-flex justify-content-center align-items-center">
+                <h5 class="ms-5">Selecciona un cine para ver su información</h5>
+            </div>
         </div>  
     </main>
 
