Cambio de URL maps por coordenadas

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -571,12 +571,12 @@
                                 </p>
                             </div>
                             <div class="d-flex justify-content-center mt-4">
-                                <h6>URL Maps y Imagen del Cine</h6>
+                                <h6>Coordenadas y Imagen del Cine</h6>
                             </div>
                             <div class="d-flex justify-content-between mt-2 ms-3">
                                 <p>
-                                    <label for="nombre" class="visually-hidden">URL Google Maps</label>
-                                    <input type="text" class="form-control" placeholder="URL Google Maps" id="nombre" name="maps" required="required">
+                                    <label for="nombre" class="visually-hidden">Latitud,Longitud</label>
+                                    <input type="text" class="form-control" placeholder="Latitud,Longitud" id="nombre" name="maps" required="required">
                                 </p>
                                 <p class="ms-4">
                                     <label for="formFileMultiple" class="visually-hidden">Imagenes</label>
